--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@
 /tmp
 /out-tsc
 /bazel-out
-
+dist/
+.angular/
+.cache/
 # Node
 /node_modules
 npm-debug.log
 yarn-error.log
+yarn-debug.log
 
 # IDEs and editors
 .idea/
@@ -19,6 +22,8 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.vscode/
+.idea/
 
 # Visual Studio Code
 .vscode/*
